--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
         "cwd": "${workspaceFolder}",
         "console": "internalConsole",
         "stopOnEntry": false,
-        "mainClass": "Fibonacci",
+        "mainClass": "Caminhao",
         "args": ""
     }
     ]
